--- a/conf/experiments/problem1/decisiontree.yaml
+++ b/conf/experiments/problem1/decisiontree.yaml
@@ -11,3 +11,4 @@ model:
     criterion: ['gini', 'entropy', 'log_loss']
     ccp_alpha: 0
 
+score_metrics: ['accuracy', 'f1', 'recall', 'precision']
