--- a/conf/experiments/problem1/neuralnet.yaml
+++ b/conf/experiments/problem1/neuralnet.yaml
@@ -15,7 +15,7 @@ model:
     layer2:
         - _target_: tensorflow.keras.layers.LSTM
           units: 16
-    units: [16, 64, 128. 256]
+    units: [16, 64, 128, 256]
 
 
 
